--- a/cmdk/package.json
+++ b/cmdk/package.json
@@ -22,16 +22,17 @@
     "dev": "tsup src --watch"
   },
   "peerDependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "1.0.5",
     "@radix-ui/react-id": "^1.0.1",
-    "@radix-ui/react-primitive": "1.0.3"
+    "@radix-ui/react-primitive": "1.0.3",
+    "use-sync-external-store": "^1.2.0"
   },
   "devDependencies": {
-    "@types/react": "18.0.15"
+    "@types/react": "^17.0.0"
   },
   "sideEffects": false,
   "repository": {
